--- a/app.css
+++ b/app.css
@@ -151,6 +151,8 @@ input::placeholder {
   h1 {
     font-size: 7.5rem; /* Adjust heading size for smaller screens */
     margin-bottom: 2rem; /* Adjust margin bottom for smaller screens */
+    -webkit-text-stroke: 0.01rem black;
+
   }
 
   h2 {
